[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/cross.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 50
border_color = Color( 1, 1, 1, 0.396078 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Header" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 72.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="AppName" type="Label" parent="Header"]
margin_left = 16.0
margin_top = 8.0
margin_right = 273.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Soundboard"

[node name="ReturnButton" type="TextureButton" parent="Header"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_bottom = 72.0
texture_normal = ExtResource( 3 )
expand = true

[node name="PitchLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 128.0
margin_right = 276.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 2 )
text = "Hauteur:"

[node name="PitchHSlider" type="HSlider" parent="."]
margin_left = 320.0
margin_top = 144.0
margin_right = 640.0
margin_bottom = 194.0
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 5 )
min_value = 0.1
max_value = 4.0
step = 0.1
value = 1.0

[node name="PitchValue" type="Label" parent="."]
margin_left = 648.0
margin_top = 152.0
margin_right = 666.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 3 )
text = "1"

[connection signal="pressed" from="Header/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="value_changed" from="PitchHSlider" to="." method="_on_PitchHSlider_value_changed"]
